From 7daa921 (gmrt):
===================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add support for 'ugmrt' as a telescope id 

In prisim/examples/simparms/defaultparms_dev.yaml,

(*) Add support for 'ugmrt' as a telescope id

In scripts/run_prisim.py,

(*) Add support for 'ugmrt' as a telescope id

In prisim/interferometry.py,

(*) Update docstrings to indicate support for 'ugmrt' as a telescope id

In prisim/primary_beams.py,

(*) In function primary_beam_generator(), add support for 'ugmrt' as a
telescope id
(*) In function GMRT_primary_beam(), add input keyword instrument that
can support 'gmrt' (default) or 'ugmrt' and provide corresponding
polynomial coefficients for the primary beam. Update function docstring
accordingly
(*) In function GMRT_primary_beam(), check for NaN values and raise a
ValueError if NaN values found

From 8061bbd (master):
=====================

In prisim/primary_beams.py,

(*) In functions VLA_primary_beam() and GMRT_primary_beam(), check if
the returned primary beam exceeds unity and raise ValueError if it
does due to the invalidity of the polynomial equations.

From a2d544f (master):
=====================

In prisim/interferometry.py,

(*) In member function observe() of class InterferometerArray, pass
the right shape of inputs in calls to altaz2hadec() 

From bb083bc (closure-adv):
==========================

(*) Add folder prisim/examples/codes/ and its contents to repo

In setup.py,

(*) Include folder prisim/examples/codes/ and its contents during
installation

From acdf710 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Modify function save_CPhase_cross_power_spectrum() to save also the
output of function incoherent_cross_power_spectrum_average()
(*) Modify function read_CPhase_cross_power_spectrum() to also read the
what is saved using function save_CPhase_cross_power_spectrum() that
came as the output of function incoherent_cross_power_spectrum_average()

From c8b09de (master):